--- a/gtreasury/src/app/cash/components/cash-container/cash-container.component.html
+++ b/gtreasury/src/app/cash/components/cash-container/cash-container.component.html
@@ -1,1 +1,3 @@
-<p>cash-container works!</p>
+<gt-cash-toolbar></gt-cash-toolbar>
+<gt-cash-tabstrip></gt-cash-tabstrip>
+<router-outlet></router-outlet>
