--- a/gtreasury/src/styles/styles.scss
+++ b/gtreasury/src/styles/styles.scss
@@ -77,10 +77,9 @@ body {
 }
 
 
-// CSS added by Mike Y. at SPR that we will likely replace with less utility-type styling
+// CSS added by Mike Y. at SPR; we will likely replace with less utility-type styling
 
-.no-background
-{
+.no-background {
   background-color: #FFFFFF;
 }
 
