gets the basic layout oft he header correcr

--- a/gtreasury/src/app/shared/components/header/header.component.html
+++ b/gtreasury/src/app/shared/components/header/header.component.html
@@ -1,20 +1,10 @@
 <kendo-appbar class="gt-header">
-    <kendo-appbar-section>
-        <gt-header-ticker></gt-header-ticker>
-    </kendo-appbar-section>
-    <kendo-appbar-section>
-        <gt-header-search></gt-header-search>
-    </kendo-appbar-section>
-    <kendo-appbar-section>
+        <gt-header-ticker cass="gt-header-left"></gt-header-ticker>
+        <gt-header-search class="gt-header-center"></gt-header-search>
+    <kendo-appbar-section class="gt-header-right">
         <gt-header-quick-tasks></gt-header-quick-tasks>
-    </kendo-appbar-section>
-    <kendo-appbar-section>
         <gt-header-support></gt-header-support>
-    </kendo-appbar-section>
-    <kendo-appbar-section>
         <gt-header-language-selector></gt-header-language-selector>
-    </kendo-appbar-section>
-    <kendo-appbar-section>
         <gt-header-user></gt-header-user>
     </kendo-appbar-section>
 </kendo-appbar>
