--- a/gtreasury/src/app/app.component.scss
+++ b/gtreasury/src/app/app.component.scss
@@ -13,7 +13,12 @@
 
     &-sidebar {
         flex-shrink: 0;
+        flex-grow: 0;
         overflow-y: auto;
+    }
+
+    &-main {
+        flex-grow: 1;
     }
 
     &-header {
