--- a/gtreasury/src/app/shared/components/header/header-search/header-search.component.html
+++ b/gtreasury/src/app/shared/components/header/header-search/header-search.component.html
@@ -1,5 +1,5 @@
-<kendo-textbox [style.width.px]="160" placeholder="Search for anything..." [clearButton]="true">
+<kendo-textbox class="gt-search" placeholder="Search for anything..." [clearButton]="true">
     <ng-template kendoTextBoxPrefixTemplate>
-        <clr-icon shape="search" size="12" class="light-text"></clr-icon>
+        <clr-icon shape="search" size="16" class="gt-search-icon"></clr-icon>
     </ng-template>
 </kendo-textbox>
