--- a/gtreasury/src/app/shared/components/header/header-user/header-user.component.html
+++ b/gtreasury/src/app/shared/components/header/header-user/header-user.component.html
@@ -1,8 +1,13 @@
 <div class="gt-user">
-    <clr-icon shape="bell" class="gt-user-alerts gt-user-menu-icon has-badge is-solid" size="24"></clr-icon>
+    <div class="gt-user-alerts">
+        <kendo-badge-container>
+            <clr-icon shape="bell" class="gt-user-icon is-solid" size="24"></clr-icon>
+            <kendo-badge class="gt-user-badge" size="small" themeColor="error">2</kendo-badge>
+        </kendo-badge-container>
+    </div>
 
     <div class="gt-user-menu">
         <kendo-avatar *ngIf="!user.iconSource" [initials]="user.initials" shape="circle" width="40px" height="40px"></kendo-avatar>
-        <clr-icon class="gt-user-menu-icon" shape="angle" dir="down"></clr-icon>
+        <clr-icon class="gt-user-icon" shape="angle" dir="down"></clr-icon>
     </div>
 </div>
