--- a/gtreasury/src/app/shared/components/header/header-user/header-user.component.scss
+++ b/gtreasury/src/app/shared/components/header/header-user/header-user.component.scss
@@ -5,15 +5,21 @@
     align-items: center;
     gap: 1.5rem;
 
+    &-icon {
+        color: $icon-default;
+        cursor: pointer;
+    }
+
     &-menu {
-        display: inline-flex;
+        display: flex;
         gap: 0.5rem;
         align-items: center;
         cursor: pointer;
+    }
 
-        &-icon {
-            color: $icon-default;
-            cursor: pointer;
-        }
+    &-badge {
+        top: 2px;
+        right: 2px;
+        font-weight: bold;
     }
 }
