--- a/gtreasury/src/app/shared/components/header/header.component.scss
+++ b/gtreasury/src/app/shared/components/header/header.component.scss
@@ -3,4 +3,15 @@
 .gt-header {
     background-color: $core-gray-01;
     padding: 0;
+    gap: 3rem;
+
+    &-right {
+        margin-left: auto;
+        display: flex;
+        gap: 1.5rem;
+    }
+
+    &-center {
+        flex-grow: 1;
+    }
 }
