Set dropdowns to stay open until item selected or another item on screen is selected

--- a/src/app/shared/components/header/header-quick-tasks/header-quick-tasks.component.html
+++ b/src/app/shared/components/header/header-quick-tasks/header-quick-tasks.component.html
@@ -1,5 +1,5 @@
 <div class="gt-quick-tasks-header">
-  <kendo-menu [items]="items" [openOnClick]="true">
+  <kendo-menu [items]="items" [openOnClick]="{ toggle: 'click' }">
     <ng-template kendoMenuItemTemplate let-item="item">
         <clr-icon *ngIf="item.iconClass" [attr.shape]="item.iconClass" size="16"></clr-icon>
         <span>{{item.text}}</span>
