Refactor Title Bar to be a generic component. Modify date / time to match spec. Additional work will need to be done to make it generic for other screens.

--- a/src/app/cash/components/cash-container/cash-container.component.html
+++ b/src/app/cash/components/cash-container/cash-container.component.html
@@ -1,5 +1,5 @@
 <div class="gt-cash-container">
-  <gt-cash-titlebar></gt-cash-titlebar>
+  <gt-titlebar></gt-titlebar>
   <gt-subheader [tabs]="tabs"></gt-subheader>
   <router-outlet class="gt-router-outlet"></router-outlet>
 </div>
